attempt to merge with gh-pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<h1>table_magnifier.js</h1>
+		<p>See the ugly table below ? Now move your mouse on it.</p>
 		<table width="400px" height="300px">
 			<tr>
 				<th class="w8">Group</th>
@@ -1648,6 +1649,8 @@
 				</div></td>
 			</tr>
 		</table>
+		<p>Code and more <a href="https://github.com/goulu/table_magnifier.js">on GitHub</a></p>
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script src="table_magnifier.js"></script>
 	</body>
